WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
267543
REGRESSION (Fullscreen API): cnn.com: Videos are zoomed in when playing in full screen on iOS
https://bugs.webkit.org/show_bug.cgi?id=267543
Summary
REGRESSION (Fullscreen API): cnn.com: Videos are zoomed in when playing in fu...
Antti Koivisto
Reported
2024-01-15 07:25:29 PST
The video element gets object-fit:fill which leads to bad video experience on iPhone portrait mode.
Attachments
Add attachment
proposed patch, testcase, etc.
Antti Koivisto
Comment 1
2024-01-15 07:26:59 PST
rdar://119640248
Antti Koivisto
Comment 2
2024-01-15 07:34:37 PST
Pull request:
https://github.com/WebKit/WebKit/pull/22786
EWS
Comment 3
2024-01-16 03:47:54 PST
Committed
273061@main
(9b890f5bbf67): <
https://commits.webkit.org/273061@main
> Reviewed commits have been landed. Closing PR #22786 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug