REGRESSION (Fullscreen API): cnn.com: Videos are zoomed in when playing in full screen on iOS https://bugs.webkit.org/show_bug.cgi?id=267543 rdar://119640248

Reviewed by Tim Nguyen.

The page uses bitmovin video player which correctly sets 'object-fit:contain' for the full screen
video element. However the page also has a style rule with equivalent specificity that sets 'object-fit:fill'.
The video player stylesheet is inserted dynamically and its position in the document varies, allowing
the 'fill' rule win under some circumstances.

* Source/WebCore/page/Quirks.cpp:
(WebCore::Quirks::needsFullscreenObjectFitQuirk const):
* Source/WebCore/page/Quirks.h:
* Source/WebCore/style/StyleAdjuster.cpp:
(WebCore::Style::Adjuster::adjustForSiteSpecificQuirks const):

Adjust the style 'object-fit:fill' -> 'object-fit:contain'

Canonical link: https://commits.webkit.org/273061@main